Bulletpoints hopefully working.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<p>
 	So here are a few facts about my track and field (or in the non-American Egnlish, athletics) carrier:
 	<ul>
-	one
-	two
+	<li> one </li>
+	<li> two </li>
 	</ul>
 	</p>
     </body>
