Adding bulletpoints to the story.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 	<p>
 	So here are a few facts about my track and field (or in the non-American Egnlish, athletics) carrier:
 	<ul>
-	<li>one</li>
-	<li>two</li>
+	<li>My best time on 200m is the first split of 400m.</li>
+	<li>My best time on 100m was when it was the first discipline of the decathlon. I had some injuries in my hamstring. The plan was to take it easy, make sure I don't make the enjury worse. I remember just crusing to the finish line. Not spending a lot of power, just making sure I get an okay amout of points. It was my personal best.</li>
+	<li></li>
 	</ul>
 	</p>
     </body>
