The javeling story.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<ul>
 	<li>My best time on 200m is the first split of 400m.</li>
 	<li>My best time on 100m was when it was the first discipline of the decathlon. I had some injuries in my hamstring. The plan was to take it easy, make sure I don't make the enjury worse. I remember just crusing to the finish line. Not spending a lot of power, just making sure I get an okay amout of points. It was my personal best.</li>
-	<li></li>
+	<li>The furthest I ever threw javeling was the first trow (out of 6) when I was just "testing the waters". It was an important competition (conference championship). I was heavily favoured based on the results of that season. However ,I was so much better than the feild that I knew I can win even if I am not on my best level that day. I was completelly relaxed.</li>
 	</ul>
 	</p>
     </body>
