add link to the video

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 	<li>My best time on 100m was when it was the first discipline of the decathlon. I had some injuries in my hamstring. The plan was to take it easy, make sure I don't make the enjury worse. I remember just crusing to the finish line. Not spending a lot of power, just making sure I get an okay amout of points. It was my personal best.</li>
 	<li>The furthest I ever threw javeling was the first trow (out of 6) when I was just "testing the waters". It was an important competition (conference championship). I was heavily favoured based on the results of that season. However ,I was so much better than the feild that I knew I can win even if I am not on my best level that day. I was completelly relaxed.</li>
 	<li>Never miss two days in a row...</li>
-	<li>I am not the only one. Asafa Powell run his PB (WR at the time) in a semi final race when he was preserving energy for the finals that was taking place the same evening. He run 9.74s [video]. Notice how he completelly relaxes after the 60m mark, and even starts slowing down on purpose before the finish.</li>
+	<li>I am not the only one.<a href="">Asafa Powell run</a> his PB (WR at the time) in a semi final race when he was preserving energy for the finals that was taking place the same evening. He
+ run 9.74s [video]. Notice how he completelly relaxes after the 60m mark, and even starts slowing down on purpose before the finish.</li>
 	</ul>
 	</p>
     </body>
