--- a/index.html
+++ b/index.html
@@ -15,5 +15,17 @@
  run 9.74s [video]. Notice how he completelly relaxes after the 60m mark, and even starts slowing down on purpose before the finish.</li>
 	</ul>
 	</p>
+
+	<p>
+
+  <head>
+    <h2>Other topic ideas:</h2>j
+  </head>
+
+	<ul>
+        <li>Decathlon and setting the walls in between.
+	</ul>
+	</p>
+
     </body>
 </html>
