Added link to the beerthday.

--- a/index.html
+++ b/index.html
@@ -3,4 +3,7 @@
   <head>
     If you are here, you are on the wrong page.
   </head>
+  <p style="font-size: 20px; color:#1F9AFE;">
+  <a href="beerthday.html">You might want to go here</a>
+  </p>
 </html>
