Removed ref from index and added picture.

--- a/beerthday.html
+++ b/beerthday.html
@@ -1,1 +1,4 @@
-this is the right page
+<figure>
+  <img src="beer_pouring_small.jpg" alt="A Serb" style="width:300px;height:400px;">
+  <figcaption>photo credit: <a href="https://www.linkedin.com/in/bionascu/">Beatrice Ionascu</a></figcaption>
+</figure>
