First draft done.

--- a/beerthday.html
+++ b/beerthday.html
@@ -1,4 +1,79 @@
+<h3>WTF is this page? Give me a break, I'm a hardware engineer.</h3>
 <figure>
   <img src="beer_pouring_small.jpg" alt="A Serb" style="width:300px;height:400px;">
   <figcaption>photo credit: <a href="https://www.linkedin.com/in/bionascu/">Beatrice Ionascu</a></figcaption>
 </figure>
+
+<head>
+<style>
+table, th, td {
+  border: 1px solid black;
+}
+</style>
+</head>
+
+<body>
+One of my favorite things to do is to have good beer and even better conversions with my close friends. 
+Therefore I am planning to do just that on my birthday. 
+I am doing a three-stop bar hop on Saturday, October 1st, and I would like you to join me.
+
+The rough plan is as follows:
+<table style="width:100%">
+  <tr>
+    <th>Place</th>
+    <th>Address</th> 
+    <th>Time</th>
+    <th>Comment</th>
+  </tr>
+  <tr>
+    <td>Omnipollos kyrka</td>
+    <td>Sturegatan 41, 172 31 Sundbyberg</td>
+    <td>arrive at ~18</td>
+    <td>N/A</td>
+  </tr>
+  <tr>
+    <td>Stockholm Brewing Co.</td>
+    <td>Frihamnsgatan 26A, 115 56 Stockholm</td>
+    <td>arrive at 20ish</td>
+    <td>Excellent food. I recommend eating dinner here.</td>
+  </tr>
+  <tr>
+    <td>Oliver Twist</td>
+    <td>Repslagargatan 6, 118 46 Stockholm</td>
+    <td>arrive around 22ish... or depends how people feel at the previous place</td>
+    <td>N/A</td>
+  </tr>
+</table>
+
+
+<p>
+I hope you join me for the whole evening, but feel free to hop on-off the train whenever you feel like.
+The best place to reach me is on Whatsaap, Telegram or Signal. Although that might get progressively harder as the night moves on.
+</p>
+
+
+<p>
+p.s. if you really hate the page you are wellcome to make a pull request <a href="https://github.com/borisnimcevic/boris">here</a>.
+</p>
+
+<h3>FAQ (that nobody actually asked me)</h3>
+<b>How old is he turning?</b><br>
+31.<br>
+<b>But why does he behave like 7?</b><br>
+Join my girlfreinds club.<br>
+<b>Will there be food?</b><br>
+Yes, by the law they are required to serve some kind of food. (but yes... Stockholm Brewing Co. is another level)<br>
+Or at least that's what people told me... idk, I don't look up stuff.<br>
+<b>Are there other drinks besides beer?</b><br>
+Maybe? I never looked passed beer. There's water for sure.<br>
+<b>What should I get you for present?</b><br>
+Nothing, pay for your drinks. They are alrady expensive enough. (especially in Omnipollos, jeez)<br>
+<b>But I really need to bring something. (not really a question, I know)</b><br>
+Sure, but keep in mind that I have to carry that with mysself.<br>
+<b>What is your personal record in <a href="https://en.wikipedia.org/wiki/Javelin_throw">javelin throw?</a></b><br>
+56.38m<br>
+<b>Wht are your eyes closed during <a href="https://gonyuathletics.com/sports/mens-track-field/roster/boris-nimcevic/8477">your throws?</a></b><br>
+I wasn't getting a lot of sleep during the university days?<br>
+<b>Are you having fun asking yourself questions in this imaginary q-n-a?</b><br>
+Absolutely!<br>
+</body>
