--- a/beerthday.html
+++ b/beerthday.html
@@ -48,7 +48,7 @@ The rough plan is as follows:
 
 <p>
 I hope you join me for the whole evening, but feel free to hop on-off the train whenever you feel like.
-The best place to reach me is on Whatsaap, Telegram or Signal. Although that might get progressively harder as the night moves on.
+The best place to reach me is on Whatsapp, Telegram or Signal. Although that might get progressively harder as the night moves on.
 </p>
 
 
@@ -60,10 +60,10 @@ p.s. if you really hate the page you are wellcome to make a pull request <a href
 <b>How old is he turning?</b><br>
 31.<br>
 <b>But why does he behave like 7?</b><br>
-Join my girlfreinds club.<br>
+Join my girlfreind's "C'mon, are you 7?!" club.<br>
 <b>Will there be food?</b><br>
-Yes, by the law they are required to serve some kind of food. (but yes... Stockholm Brewing Co. is another level)<br>
-Or at least that's what people told me... idk, I don't look up stuff.<br>
+Yes, by the law they are required to serve some kind of food. Or at least that's what people told me... idk, I don't look up stuff.<br>
+(but yes... Stockholm Brewing Co. is another level food. I really recommend it.)<br>
 <b>Are there other drinks besides beer?</b><br>
 Maybe? I never looked passed beer. There's water for sure.<br>
 <b>What should I get you for present?</b><br>
@@ -72,7 +72,7 @@ Nothing, pay for your drinks. They are alrady expensive enough. (especially in O
 Sure, but keep in mind that I have to carry that with mysself.<br>
 <b>What is your personal record in <a href="https://en.wikipedia.org/wiki/Javelin_throw">javelin throw?</a></b><br>
 56.38m<br>
-<b>Wht are your eyes closed during <a href="https://gonyuathletics.com/sports/mens-track-field/roster/boris-nimcevic/8477">your throws?</a></b><br>
+<b>Why are your eyes closed during <a href="https://gonyuathletics.com/sports/mens-track-field/roster/boris-nimcevic/8477">your throws?</a></b><br>
 I wasn't getting a lot of sleep during the university days?<br>
 <b>Are you having fun asking yourself questions in this imaginary q-n-a?</b><br>
 Absolutely!<br>
