--- a/beerthday.html
+++ b/beerthday.html
@@ -62,10 +62,10 @@ p.s. if you really hate the page you are wellcome to make a pull request <a href
 <b>But why does he behave like 7?</b><br>
 Join my girlfreind's "C'mon, are you 7?!" club.<br>
 <b>Will there be food?</b><br>
-Yes, by the law they are required to serve some kind of food. Or at least that's what people told me... idk, I don't look up stuff.<br>
+Yes, by law they are required to serve some kind of food. Or at least that's what people told me... idk, I don't look up stuff.<br>
 (but yes... Stockholm Brewing Co. is another level food. I really recommend it.)<br>
 <b>Are there other drinks besides beer?</b><br>
-Maybe? I never looked passed beer. There's water for sure.<br>
+Maybe? I never looked past beer. There's water for sure.<br>
 <b>What should I get you for present?</b><br>
 Nothing, pay for your drinks. They are alrady expensive enough. (especially in Omnipollos, jeez)<br>
 <b>But I really need to bring something. (not really a question, I know)</b><br>
