--- a/beerthday.html
+++ b/beerthday.html
@@ -67,13 +67,13 @@ Yes, by law they are required to serve some kind of food. Or at least that's wha
 <b>Are there other drinks besides beer?</b><br>
 Maybe? I never looked past beer. There's water for sure.<br>
 <b>What should I get you for present?</b><br>
-Nothing, pay for your drinks. They are alrady expensive enough. (especially in Omnipollos, jeez)<br>
+Nothing, pay for your drinks. They are already expensive enough. (especially in Omnipollos, jeez)<br>
 <b>But I really need to bring something. (not really a question, I know)</b><br>
-Sure, but keep in mind that I have to carry that with mysself.<br>
+Sure, but keep in mind that I would have to carry it.<br>
 <b>What is your personal record in <a href="https://en.wikipedia.org/wiki/Javelin_throw">javelin throw?</a></b><br>
 56.38m<br>
 <b>Why are your eyes closed during <a href="https://gonyuathletics.com/sports/mens-track-field/roster/boris-nimcevic/8477">your throws?</a></b><br>
-I wasn't getting a lot of sleep during the university days?<br>
+I wasn't getting a lot of sleep during university days?<br>
 <b>Are you having fun asking yourself questions in this imaginary q-n-a?</b><br>
 Absolutely!<br>
 </body>
