Removed unnecesary question mark.

--- a/beerthday.html
+++ b/beerthday.html
@@ -73,7 +73,7 @@ Sure, but keep in mind that I would have to carry it.<br>
 <b>What is your personal record in <a href="https://en.wikipedia.org/wiki/Javelin_throw">javelin throw?</a></b><br>
 56.38m<br>
 <b>Why are your eyes closed during <a href="https://gonyuathletics.com/sports/mens-track-field/roster/boris-nimcevic/8477">your throws?</a></b><br>
-I wasn't getting a lot of sleep during university days?<br>
+I wasn't getting a lot of sleep during university days.<br>
 <b>Are you having fun asking yourself questions in this imaginary q-n-a?</b><br>
 Absolutely!<br>
 </body>
