--- a/beerthday.html
+++ b/beerthday.html
@@ -28,19 +28,19 @@ The rough plan is as follows:
   <tr>
     <td>Omnipollos kyrka</td>
     <td>Sturegatan 41, 172 31 Sundbyberg</td>
-    <td>arrive at ~18</td>
+    <td>table reserved from 17</td>
     <td>N/A</td>
   </tr>
   <tr>
     <td>Stockholm Brewing Co.</td>
     <td>Frihamnsgatan 26A, 115 56 Stockholm</td>
-    <td>arrive at 20ish</td>
+    <td>table reserved from 19:15</td>
     <td>Excellent food. I recommend eating dinner here.</td>
   </tr>
   <tr>
     <td>Oliver Twist</td>
     <td>Repslagargatan 6, 118 46 Stockholm</td>
-    <td>arrive around 22ish... or depends how people feel at the previous place</td>
+    <td>arrive around 21:30ish... or depends how people feel at the previous place</td>
     <td>N/A</td>
   </tr>
 </table>
