--- a/beerthday.html
+++ b/beerthday.html
@@ -6,6 +6,15 @@
 
 <head>
 <style>
+body {
+  /* uncomment to change font*/
+  /*font-family: "Trebuchet MS", serif;*/
+}
+
+img {
+  border-radius: 4px;
+}
+
 table, th, td {
   border: 1px solid black;
 }
@@ -18,6 +27,8 @@ Therefore I am planning to do just that on my birthday.
 I am doing a three-stop bar hop on Saturday, October 1st, and I would like you to join me.
 
 The rough plan is as follows:
+<br/>
+<p>
 <table style="width:100%">
   <tr>
     <th>Place</th>
@@ -44,7 +55,7 @@ The rough plan is as follows:
     <td>N/A</td>
   </tr>
 </table>
-
+</p>
 
 <p>
 I hope you join me for the whole evening, but feel free to hop on-off the train whenever you feel like.
@@ -59,21 +70,37 @@ p.s. if you really hate the page you are wellcome to make a pull request <a href
 <h3>FAQ (that nobody actually asked me)</h3>
 <b>How old is he turning?</b><br>
 31.<br>
+<br/>
+
 <b>But why does he behave like 7?</b><br>
 Join my girlfreind's "C'mon, are you 7?!" club.<br>
+<br/>
+
 <b>Will there be food?</b><br>
 Yes, by law they are required to serve some kind of food. Or at least that's what people told me... idk, I don't look up stuff.<br>
 (but yes... Stockholm Brewing Co. is another level food. I really recommend it.)<br>
+<br/>
+
 <b>Are there other drinks besides beer?</b><br>
 Maybe? I never looked past beer. There's water for sure.<br>
+<br/>
+
 <b>What should I get you for present?</b><br>
 Nothing, pay for your drinks. They are already expensive enough. (especially in Omnipollos, jeez)<br>
+<br/>
+
 <b>But I really need to bring something. (not really a question, I know)</b><br>
 Sure, but keep in mind that I would have to carry it.<br>
+<br/>
+
 <b>What is your personal record in <a href="https://en.wikipedia.org/wiki/Javelin_throw">javelin throw?</a></b><br>
 56.38m<br>
+<br/>
+
 <b>Why are your eyes closed during <a href="https://gonyuathletics.com/sports/mens-track-field/roster/boris-nimcevic/8477">your throws?</a></b><br>
 I wasn't getting a lot of sleep during university days.<br>
+<br/>
+
 <b>Are you having fun asking yourself questions in this imaginary q-n-a?</b><br>
 Absolutely!<br>
 </body>
