--- a/beerthday.html
+++ b/beerthday.html
@@ -1,14 +1,15 @@
-<h3>WTF is this page? Give me a break, I'm a hardware engineer.</h3>
-<figure>
-  <img src="beer_pouring_small.jpg" alt="A Serb" style="width:300px;height:400px;">
-  <figcaption>photo credit: <a href="https://www.linkedin.com/in/bionascu/">Beatrice Ionascu</a></figcaption>
-</figure>
-
+<!DOCTYPE html>
+<html>
 <head>
 <style>
+h1, h2, h3, h4, h5 {
+  font-family: "Rye", cursive;
+}
+
 body {
   /* uncomment to change font*/
-  /*font-family: "Trebuchet MS", serif;*/
+  /* font-family: "Press Start 2P", serif; */
+  font-family: "Varela Round", sans-serif;
 }
 
 img {
@@ -19,7 +20,17 @@ table, th, td {
   border: 1px solid black;
 }
 </style>
-</head>
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Knewave&family=Varela+Round&family=Rye&display=swap" rel="stylesheet"> 
+</head>  
+
+<h3>WTF is this page? Give me a break, I'm a hardware engineer.</h3>
+<div>
+<img src="beer_pouring_small.jpg" alt="A Serb" style="width:300px;height:400px;">
+<figcaption>photo credit: <a href="https://www.linkedin.com/in/bionascu/">Beatrice Ionascu</a></figcaption>
+</div>
 
 <body>
 One of my favorite things to do is to have good beer and even better conversions with my close friends. 
@@ -103,4 +114,6 @@ I wasn't getting a lot of sleep during university days.<br>
 
 <b>Are you having fun asking yourself questions in this imaginary q-n-a?</b><br>
 Absolutely!<br>
+
 </body>
+</html>
